# lspeak

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lspeak/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  models_manager.py
src/lspeak/audio/: __init__.py  player.py
src/lspeak/cache/: __init__.py  manager.py  models.py  similarity.py  storage.py
src/lspeak/daemon/: __init__.py  __main__.py  client.py  control.py  lockfile.py  paths.py  server.py  spawn.py
src/lspeak/embeddings/: __init__.py  generator.py  models.py
src/lspeak/providers/: __init__.py  base.py  elevenlabs.py  kokoro.py  system.py
src/lspeak/tts/: __init__.py  client.py  errors.py  models.py  pipeline.py
tests/: conftest.py  test_helpers.py
tests/integration/: test_api_integration.py  test_audio_integration.py  test_cache_integration.py  test_cache_manager_integration.py  test_cli_execution.py  test_cli_queue_integration.py  test_core_cache_integration.py  test_core_daemon_integration.py  test_core_integration.py  test_daemon_client.py  test_daemon_control_cli.py  test_daemon_control_integration.py  test_daemon_integration.py  test_daemon_performance.py  test_daemon_pipeline_integration.py  test_daemon_queue.py  test_daemon_spawn_integration.py  test_embedding_integration.py  test_http_api_integration.py  test_pipeline.py  test_provider_integration.py  test_similarity_integration.py  test_system_provider_integration.py  test_tts_integration.py
tests/unit/: test_api.py  test_audio_player.py  test_cache_manager.py  test_cache_models.py  test_cli_logic.py  test_cli_queue_options.py  test_daemon_client_unit.py  test_daemon_server.py  test_daemon_spawn_unit.py  test_elevenlabs_provider.py  test_embedding_generator.py  test_package_structure.py  test_provider_base.py  test_provider_registry.py  test_similarity_index.py  test_tts_client.py  test_tts_models.py
